# phoenixd-dashboard

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.json  backup.sh  docker-compose.yml  package-lock.json  package.json  pr-comment.md  railway.json  recovery.sh  render.yaml  reset-password.sh
.cursor/: rules
.cursor/commands/: check.md  commit.md  create-release.md  create-tag.md  restart-docker.md  sync-translations.md
.do/: app.yaml  deploy.template.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-publish.yml  release-desktop.yml
.husky/: pre-commit  pre-push
apps/donations/: Dockerfile  README.md  package-lock.json  (+1 more)
backend/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: .gitkeep  icon.icns
desktop/src-tauri/src/: docker_manager.rs  main.rs  process_manager.rs
docs/: api.md  apps-development.md  backup-recovery.md  cloud-deploy.md  cloudflare-tunnel.md  configuration.md  external-phoenixd.md  installation.md  mobile-wallet-setup.md  pwa-install.md  tor-hidden-service.md  verify-downloads.md
e2e/: cypress.config.ts  package-lock.json  package.json
frontend/: Dockerfile  cypress.config.ts  next.config.ts  package-lock.json  package.json
scripts/: backup.sh  recovery.sh  reset-password.sh  setup.sh
tor/: Dockerfile  docker-entrypoint.sh  torrc
(+190 files in other folders)
